# kdive

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .shellcheckrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  cliff.toml  docker-compose.yml  justfile  pyproject.toml  systems.toml.example
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog-sync.yml  ci.yml  docs-mermaid.yml  live.yml  publish-mock-oidc.yml  release-image.yml  release.yml  test-ordering.yml
deploy/ansible/: .ansible-lint  .yamllint  README.md  ansible.cfg  requirements.yml  site.yml
deploy/compose/: README.md  prometheus.yml
deploy/grafana/: README.md  build_dashboard.py  kdive-overview.json
deploy/mock-oidc/: Dockerfile  README.md  pom.xml
deploy/remote-libvirt-guest-helpers/: kdive-drgn
deploy/systemd/: kdive.env.example
docs/: README.md
docs/adr/: 0001-greenfield-rewrite.md  0002-multi-user-mcp-http.md  0003-six-durable-objects.md  0004-first-slice-local-libvirt.md  0005-postgres-object-store-state.md  0006-oidc-rbac-attribution.md  0007-metering-budgets-admission.md  0008-async-worker-tier-job-queue.md  0009-capability-provider-dispatch.md  0010-fastmcp-framework-auth.md  0011-provisioning-profile-schema.md  0012-secret-backend.md  0013-object-store-layout-retention.md  0014-structured-logging.md  0015-sql-migration-runner.md  0016-repository-layer-locks-idempotency.md  0017-object-store-client-interface.md  0018-job-queue-worker-execution.md  0019-tool-response-envelope.md  0020-rbac-audit-gate-implementation.md  0021-reconciler-loop-drift-repair.md  0022-capability-registry-dispatch-impl.md  0023-discovery-allocation-admission.md  0024-provisioning-profile-model-shape.md  0025-provisioning-plane-libvirt.md  0026-investigation-run-lifecycle.md  0027-safety-modules-secret-backend-impl.md  0028-control-plane-power-force-crash.md  0029-build-plane-local-make.md  0030-install-boot-plane.md  0031-retrieve-plane-vmcore-postmortem.md  0032-connect-plane-gdbstub-debugsession.md  0033-drgn-introspection-from-vmcore.md  0034-debug-plane-gdbmi-tier.md  0035-walking-skeleton-e2e-harness.md  0036-reservation-lease-semantics.md  0037-rbac-hardening-role-separation.md  0038-system-reprovision-in-place.md  0039-ssh-transport-live-introspection.md  0040-admission-lifecycle-concurrency.md  (+410 more)
docs/design/: 2026-06-16-allocation-denial-ergonomics.md  2026-06-16-diagnostics-worker-vantage-honesty.md  2026-06-16-failed-run-reason-surfacing.md  2026-06-16-investigation-enumerate-runs.md  2026-06-16-investigation-naming-reporting-fields.md  2026-06-16-local-libvirt-discovery-opt-out-plan.md  2026-06-16-local-libvirt-discovery-opt-out.md  2026-06-16-synchronous-tool-transport-bound.md  2026-06-17-diagnostics-base-image-staging.md  2026-06-17-local-warm-tree-build-admission.md  2026-06-18-debug-session-read-tools.md  2026-06-18-diagnostics-ephemeral-buildhost-agent.md  2026-06-18-fielded-tool-output-schema.md  2026-06-18-lifecycle-recovery-context.md  2026-06-20-list-pagination-envelope.md  2026-06-20-runs-list.md  2026-06-20-validate-build-image-volume.md  2026-06-21-mcp-lifecycle-prompts.md  2026-06-22-local-libvirt-gdbmi-debuginfo-resolver.md  2026-06-22-local-offline-drgn-introspection.md  2026-06-23-early-boot-console-crash-guidance.md  2026-06-23-enumerate-provisioning-rejection-values.md  2026-06-23-local-libvirt-live-drgn-introspection.md  2026-06-23-local-rootfs-drgn-helper-and-networking.md  2026-06-23-local-staged-path-catalog-source.md  2026-06-23-runs-get-console-ref.md  2026-06-23-search-text-bounded-context.md  2026-06-26-diagnostics-local-kernel-src-data.md  2026-06-26-runs-get-console-access-hint-864.md  2026-06-27-tool-gateway-dispatcher-866.md  2026-06-27-warm-tree-dirty-provenance-861.md  2026-06-28-scrub-adr-refs-from-agent-surface-880.md  2026-06-29-provision-baseline-kernel-boot-905.md  2026-06-29-system-direct-ssh.md  2026-06-30-console-run-correlation-935.md  2026-06-30-dirty-file-manifest-938.md  2026-06-30-sysrq-diagnostic-capture-925.md  2026-07-08-compact-response-envelope-1035.md  2026-07-09-runs-boot-force-reboot-1063.md  2026-07-09-runs-get-console-manifest-opt-in-1067.md  (+102 more)
docs/development/: cross-platform.md  mutation-sweep-status.md  mutation-testing.md  (+1 more)
scripts/: check-doc-links.sh  check-doc-paths.sh  check-local-libvirt.sh  check-served-doc-links.sh  check-setup-deps.sh  check_adr_status.py  check_container_arch_matrix.py  check_env_documented.py  config_env_guard.py  fetch-kernel-tree.sh  gen_cli_verbs.py  gen_config_reference.py  gen_doc_constants.py  gen_doc_resources.py  gen_rbac_tool_matrix.py  gen_tool_reference.py  kdive_set_accounting.py  live-debug.py  m2_portability_gate.py  mutate.py  schema_immutable_guard.py  select_changed_tests.py  setup-local-libvirt.sh  setup-remote-libvirt.sh  stamp-buildinfo.sh
tests/: clock.py  conftest.py  host_capabilities.py  reconcile_helpers.py  test_conftest_s3_env.py  test_image_provenance_wiring.py  test_log.py  test_main_version.py  test_serialization.py  test_worker_health.py
(+2469 files in other folders)
