[build-system]
requires = ["uv_build==0.11.28"]
build-backend = "uv_build"

[project]
name = "kdive"
version = "0.4.0"
description = "Kernel Debug, Inspect, Validate, Explore — MCP platform for kernel build-boot-debug workflows"
license = "Apache-2.0"
authors = [{ name = "David Christensen" }]
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
  "fastmcp-slim[server,client]==3.4.4",
  "psycopg[binary]==3.3.4",
  "psycopg-pool==3.3.1",
  "boto3==1.43.21",
  "botocore==1.43.45",
  "defusedxml==0.7.1",
  "httpx==0.28.1",
  "libvirt-python==12.5.0",
  "mcp==1.28.1",
  "openpyxl==3.1.5",
  "opentelemetry-api==1.42.1",
  "opentelemetry-sdk==1.42.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.42.1",
  "opentelemetry-instrumentation-logging==0.63b1",
  "pydantic==2.13.4",
  "pygdbmi==0.11.0.0",
  "pyyaml==6.0.3",
  "starlette==1.3.1",
  "uvicorn==0.51.0",
]

[project.urls]
Homepage = "https://github.com/randomparity/kdive"
Repository = "https://github.com/randomparity/kdive"
Issues = "https://github.com/randomparity/kdive/issues"
Changelog = "https://github.com/randomparity/kdive/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "ruff==0.15.21",
  "ty==0.0.57",
  "pytest==9.1.1",
  "pytest-xdist==3.8.0",
  "testcontainers==4.14.2",
  "hypothesis==6.156.4",
  "jinja2==3.1.6",
  "jsonschema==4.26.0",
  "openpyxl==3.1.5",
]
live = [
  "drgn==0.2.0",
]

[project.scripts]
kdivectl = "kdive.cli.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.rules]
# Keep ty's strict defaults for the hard-gating CI typecheck job — no project-wide
# relaxations. The C-extension dependencies ship no type stubs, so the later issues
# that import them suppress `unresolved-import` with a
# scoped per-site ignore rather than downgrading the rule for the whole tree.

[[tool.ty.overrides]]
# drgn and libguestfs are operator-provided C extensions (the `live` dependency-group and the
# system libguestfs binding) absent from CI and most environments, but present on a worker/host
# that runs the live_vm + local-libvirt operations (this dev host does). When they ARE installed,
# ty resolves them, and the per-site `# ty: ignore[unresolved-import]`/`[unresolved-attribute]`
# directives flip from "used" (CI) to "unused" (host with the extensions). `unused-ignore-comment`
# is the one rule that cannot be satisfied in both environments at once, so it is scoped off for
# exactly these C-extension wrapper files; every other rule stays strict here. This keeps
# `just type` consistent whether or not the extensions are installed — no `SKIP=ty` ritual.
include = [
  "src/kdive/providers/local_libvirt/lifecycle/rootfs/baseline_kernel.py",
  "src/kdive/providers/local_libvirt/lifecycle/boot/guest_kernel_writer.py",
  "src/kdive/providers/local_libvirt/lifecycle/install.py",
  "src/kdive/providers/local_libvirt/retrieve.py",
  "src/kdive/providers/shared/debug_common/core_file.py",
  "src/kdive/providers/shared/debug_common/drgn_program.py",
  "src/kdive/providers/shared/runtime_paths.py",
  "tests/providers/local_libvirt/test_introspect_ppc64le_live.py",
]

[tool.ty.overrides.rules]
unused-ignore-comment = "ignore"

[tool.pyright]
# `ty` (above) is the authoritative type checker — it runs in CI (`just type`) and resolves the
# venv via `uv run`. This stanza is only for the editor/IDE language server (Pyright/Pylance/
# basedpyright): point it at the uv `.venv` so third-party imports resolve, and turn type-checking
# off so it neither duplicates ty nor disagrees on ty-only `# ty: ignore` suppressions (e.g. the
# libvirt duck-typed seam). Editor navigation/hover only — not a second CI gate.
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
markers = [
  "live_vm: requires an operator-provided libvirt/KVM/debug environment (KVM/nested-virt host, libvirt, drgn, kdump-enabled guest image)",
  "live_stack: requires a running kdive stack (host server/worker/reconciler + Postgres/MinIO/OIDC backends) and a reachable OIDC issuer, beyond the live_vm KVM host",
  "live_vm_tcg: an emulated foreign-arch (TCG) guest proof — the ppc64le provision→boot→crash→retrieve spine, run over the live_stack vehicle; skips cleanly without the foreign qemu emulator (see docs/adr/0353-live-vm-tcg-tier.md)",
  "live_vm_throwaway: an additive live_vm sub-marker for the throwaway-domain family — a transient domain booted from a staged rootfs/bzimage and torn down after one op; most are served by boot_throwaway_domain (kdive.testing.live_vm), while the gdbstub-preserve debug tests still render their own production XML pending a harness gdb_port extension. The test also carries the bare live_vm marker (#1290)",
  "live_vm_provisioned: an additive live_vm sub-marker for tests against an externally provisioned System (KDIVE_LIVE_VM_SYSTEM_ID + KDIVE_S3_*); the test also carries the bare live_vm marker (#1290)",
  "oidc_issuer: requires only the mock-oauth2-server container up (no kdive server, no Postgres, no VM)",
]
